Added new products. Still need to add images for those products.

--- a/allProducts.html
+++ b/allProducts.html
@@ -70,9 +70,11 @@
         <li class="active"><a href="#tftTab" data-toggle="tab">TFT</a></li>
         <li><a href="#oledTab" data-toggle="tab">OLED</a></li>
         <li><a href="#tpTab" data-toggle="tab">Touch Panel</a></li>
-        <li><a href="#charmonoTab" data-toggle="tab">Character Monochrome</a></li>
-        <li><a href="#graphmonoTab" data-toggle="tab">Graphic Monochrome</a></li>
+        <li><a href="#wipowTab" data-toggle="tab">Wireless Power</a></li>
+        <li><a href="#charmonoTab" data-toggle="tab">Character Mono</a></li>
+        <li><a href="#graphmonoTab" data-toggle="tab">Graphic Mono</a></li>
         <li><a href="#customTab" data-toggle="tab">Custom Segment</a></li>
+        <li><a href="#emsTab" data-toggle="tab">EMS</a></li>
       </ul>
       <div class="tab-content">
         <div class="tab-pane active" id="tftTab">
