--- a/products.html
+++ b/products.html
@@ -72,37 +72,47 @@
     <br><br>
     Click on the links below to learn more about our wide range of products and available customizations.</p>
     <div class="row">
-      <a href="allProducts.html#tftTab" class="col-lg-4 col-sm-4 col-xs-12 hs2links">
+      <a href="allProducts.html#tftTab" class="col-lg-3 col-sm-3 col-xs-12 hs2links">
         <img class="img-responsive productImage" src="images/products/tft/TFT.png" height="200px">
         <h3>TFT</h3>
         <p>A TFT LCD can give your product the perfect display. You can customize with different sizes, resolutions, and technologies like IPS.</p>
       </a>
-      <a href="allProducts.html#oledTab" class="col-lg-4 col-sm-4 col-xs-12 hs2links">
+      <a href="allProducts.html#oledTab" class="col-lg-3 col-sm-3 col-xs-12 hs2links">
         <img class="img-responsive productImage" src="images/products/oled/OLED.png" height="200px">
         <h3>OLED</h3>
         <p>An OLED LCD gives your product great resolution and rich, vibrant colors. Available in full-color Active Matrix or single-color Passive Matrix.</p>
       </a>
-      <a href="allProducts.html#tpTab" class="col-lg-4 col-sm-4 col-xs-12 hs2links">
+      <a href="allProducts.html#tpTab" class="col-lg-3 col-sm-3 col-xs-12 hs2links">
         <img class="img-responsive productImage" src="images/products/touchPanel/TP.png" height="200px">
         <h3>Touch Panel</h3>
+        <p>A Touch Panel can bring your product and its user closer together. We can provide a Capacitive or Resistive Touch Panel to ANY of our displays.</p>
+      </a>
+      <a href="allProducts.html#wipowTab" class="col-lg-3 col-sm-3 col-xs-12 hs2links">
+        <img class="img-responsive productImage" src="images/products/touchPanel/TP.png" height="200px">
+        <h3>Wireless Power</h3>
         <p>A Touch Panel can bring your product and it's user closer together. We can provide a Capacitive or Resistive Touch Panel to ANY of our displays.</p>
       </a>
     </div>
     <div class="row">
-      <a href="allProducts.html#charmonoTab" class="col-lg-4 col-sm-4 col-xs-12 hs2links">
+      <a href="allProducts.html#charmonoTab" class="col-lg-3 col-sm-3 col-xs-12 hs2links">
         <img class="img-responsive productImage" src="images/products/charMono/CharacterMonochrome.jpg" height="200px">
         <h3>Character Monochrome</h3>
         <p>A Character Monochrome LCD is a simple, easy to read and use display solution. Although not as popular as before, we still provide fully custom character displays.</p>
       </a>
-      <a href="allProducts.html#graphmonoTab" class="col-lg-4 col-sm-4 col-xs-12 hs2links">
+      <a href="allProducts.html#graphmonoTab" class="col-lg-3 col-sm-3 col-xs-12 hs2links">
         <img class="img-responsive productImage" src="images/products/graphMono/GraphicMonochrome.jpg" height="200px">
         <h3>Graphic Monochrome</h3>
         <p>A Graphic Monochrome LCD can add a lot of customization to your product over a character display. We provide any size, resolution, and color.</p>
       </a>
-      <a href="allProducts.html#customTab" class="col-lg-4 col-sm-4 col-xs-12 hs2links">
+      <a href="allProducts.html#customTab" class="col-lg-3 col-sm-3 col-xs-12 hs2links">
         <img class="img-responsive productImage" src="images/products/customSegment/CustomSegment.jpg" height="200px">
         <h3>Custom Segment</h3>
         <p>For when your project needs a truly iconic look. We can provide a Custom Segment LCD with any number of segments, custom icons, and in any color.</p>
+      </a>
+      <a href="allProducts.html#emsTab" class="col-lg-3 col-sm-3 col-xs-12 hs2links">
+        <img class="img-responsive productImage" src="images/products/touchPanel/TP.png" height="200px">
+        <h3>EMS</h3>
+        <p>A Touch Panel can bring your product and it's user closer together. We can provide a Capacitive or Resistive Touch Panel to ANY of our displays.</p>
       </a>
     </div>
   </div>
