New coming soon page!

--- a/allProducts.html
+++ b/allProducts.html
@@ -170,6 +170,12 @@
           </div>
           <p>Howdy, I'm in Section Touch panel.</p>
         </div>
+        <div class="tab-pane" id="wipowTab">
+          <div class="col-xs-12" style="">
+            <h2>Wireless Power</h2>
+          </div>
+          <p>Howdy, I'm in Section Wireless Power.</p>
+        </div>
         <div class="tab-pane" id="charmonoTab">
           <div class="row">
             <div class="col-xs-6" style="padding: 20px;">
@@ -215,6 +221,12 @@
             <h2>Custom Segment Display</h2>
           </div>
           <p>Howdy, I'm in Section Custom Segment.</p>
+        </div>
+        <div class="tab-pane" id="emsTab">
+          <div class="col-xs-12" style="">
+            <h2>EMS</h2>
+          </div>
+          <p>Howdy, I'm in Section EMS.</p>
         </div>
       </div>
     </div>
