--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
+<?php
+
+if(isset($_POST[fullName]) && isset($_POST[companyName]) && isset($_POST[companyLocation]) && isset($_POST[contactEmail]) && isset($_POST[contactPhoneNumber]) && isset($_POST[message])){
+  mail('jordanruhl@gmail.com', 'all good', 'all good');
+}
+else {
+  $url = 'http://www.facebook.com'
+}
+
+?>
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -214,30 +225,30 @@
         <h1>Contact Us!</h1>
       </div>
       <div class="modal-body" style="padding:40px 50px;">
-        <form role="form">
+        <form role="form" action="" method="POST">
           <div class="form-group">
             <label for="usrname"></span> Full Name</label>
-            <input type="text" class="form-control" id="usrname" placeholder="Enter full name">
+            <input type="text" class="form-control" id="fullName" name="fullName" placeholder="Enter full name">
           </div>
           <div class="form-group">
             <label for="compName"></span> Company Name</label>
-            <input type="text" class="form-control" id="usrname" placeholder="Enter company name">
+            <input type="text" class="form-control" id="companyName" name="companyName" placeholder="Enter company name">
           </div>
           <div class="form-group">
             <label for="location"></span> Company Location</label>
-            <input type="text" class="form-control" id="psw" placeholder="Orlando, FL">
+            <input type="text" class="form-control" id="companyLocation" name="companyLocation" placeholder="Orlando, FL">
           </div>
           <div class="form-group">
             <label for="eml"></span> Contact E-mail Address</label>
-            <input type="text" class="form-control" id="psw" placeholder="someone@example.com">
+            <input type="email" class="form-control" id="contactEmail" name="contactEmail" placeholder="someone@example.com">
           </div>
           <div class="form-group">
             <label for="phnum"></span> Contact Phone Number</label>
-            <input type="text" class="form-control" id="psw" placeholder="(407) 867-5309">
+            <input type="text" class="form-control" id="contactPhoneNumber" name="contactPhoneNumber" placeholder="(407) 867-5309">
           </div>
           <div class="form-group">
             <label for="message"></span> Message</label>
-            <textarea class="form-control" style="width: 100%;" rows="5"></textarea>
+            <textarea class="form-control" style="width: 100%;" rows="5" id="message" name="message"></textarea>
           </div>
             <button type="submit" class="btn btn-info btn-block"></span> Request & we will get back to you soon!</button>
         </form>
