--- a/index.html
+++ b/index.html
@@ -22,6 +22,25 @@ else {
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="Jstylesheet.css">
+
+  <script>
+    $(document).ready(function(){
+      $("button#submit").click(function(){
+        $.ajax({
+          type: "POST",
+          url: "sendContactForm.php",
+          data: $('form.feedback').serialize(),
+          success: function(message){
+            $("#feedback").html(message)
+            $("#feedback-modal").modal('hide');
+          },
+          error: function(){
+            alert("Error");
+          }
+        });
+      });
+    });
+  </script>
 </head>
 
 <body link="black">
@@ -225,7 +244,7 @@ else {
         <h1>Contact Us!</h1>
       </div>
       <div class="modal-body" style="padding:40px 50px;">
-        <form role="form" action="" method="POST">
+        <form role="form" class="feedback" name="feedback">
           <div class="form-group">
             <label for="usrname"></span> Full Name</label>
             <input type="text" class="form-control" id="fullName" name="fullName" placeholder="Enter full name">
@@ -250,7 +269,7 @@ else {
             <label for="message"></span> Message</label>
             <textarea class="form-control" style="width: 100%;" rows="5" id="message" name="message"></textarea>
           </div>
-            <button type="submit" class="btn btn-info btn-block"></span> Request & we will get back to you soon!</button>
+            <button type="submit" class="btn btn-info btn-block" id="submit"></span> Request & we will get back to you soon!</button>
         </form>
       </div>
       <div class="modal-footer">
