--- a/index.html
+++ b/index.html
@@ -214,30 +214,30 @@
         <h1>Contact Us!</h1>
       </div>
       <div class="modal-body" style="padding:40px 50px;">
-        <form role="form" action="sendContactForm.php">
+        <form role="form" action="sendContactForm.php" method="post" id="contactForm">
           <div class="form-group">
             <label for="usrname"></span> Full Name</label>
-            <input type="text" class="form-control" id="fullName" name="fullName" placeholder="Enter full name">
+            <input type="text" class="form-control" id="fullName" name="fullName" placeholder="Enter full name" required>
           </div>
           <div class="form-group">
             <label for="compName"></span> Company Name</label>
-            <input type="text" class="form-control" id="companyName" name="companyName" placeholder="Enter company name">
+            <input type="text" class="form-control" id="companyName" name="companyName" placeholder="Enter company name" required>
           </div>
           <div class="form-group">
             <label for="location"></span> Company Location</label>
-            <input type="text" class="form-control" id="companyLocation" name="companyLocation" placeholder="Orlando, FL">
+            <input type="text" class="form-control" id="companyLocation" name="companyLocation" placeholder="Orlando, FL" required>
           </div>
           <div class="form-group">
             <label for="eml"></span> Contact E-mail Address</label>
-            <input type="email" class="form-control" id="contactEmail" name="contactEmail" placeholder="someone@example.com">
+            <input type="email" class="form-control" id="contactEmail" name="contactEmail" placeholder="someone@example.com" required>
           </div>
           <div class="form-group">
             <label for="phnum"></span> Contact Phone Number</label>
-            <input type="text" class="form-control" id="contactPhoneNumber" name="contactPhoneNumber" placeholder="(407) 867-5309">
+            <input type="text" class="form-control" id="contactPhoneNumber" name="contactPhoneNumber" placeholder="(407) 867-5309" required>
           </div>
           <div class="form-group">
             <label for="message"></span> Message</label>
-            <textarea class="form-control" style="width: 100%;" rows="5" id="message" name="message"></textarea>
+            <textarea class="form-control" style="width: 100%;" rows="5" id="message" name="message" required></textarea>
           </div>
             <button type="submit" class="btn btn-info btn-block" id="submit"></span> Request & we will get back to you soon!</button>
         </form>
