--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="Jstylesheet.css">
+  
+  <script src="MTUSAjavascript.js"></script>
+
+  <script src='https://www.google.com/recaptcha/api.js'></script>
+
 </head>
 
 <body link="black">
@@ -204,7 +209,7 @@
 </div>
 
     <!-- Modal -->
-<div class="modal fade" id="myModal" role="dialog">
+<div class="modal fade" id="contactModal" role="dialog">
   <div class="modal-dialog">
     
     <!-- Modal content-->
@@ -214,7 +219,7 @@
         <h1>Contact Us!</h1>
       </div>
       <div class="modal-body" style="padding:40px 50px;">
-        <form role="form" action="sendContactForm.php" method="post" id="contactForm">
+        <form id="contactForm" method="post">
           <div class="form-group">
             <label for="usrname"></span> Full Name</label>
             <input type="text" class="form-control" id="fullName" name="fullName" placeholder="Enter full name" required>
@@ -236,10 +241,13 @@
             <input type="text" class="form-control" id="contactPhoneNumber" name="contactPhoneNumber" placeholder="(407) 867-5309" required>
           </div>
           <div class="form-group">
-            <label for="message"></span> Message</label>
-            <textarea class="form-control" style="width: 100%;" rows="5" id="message" name="message" required></textarea>
+            <label for="msg"></span> Message</label>
+            <textarea class="form-control" style="width: 100%;" rows="5" id="msg" name="msg" required></textarea>
           </div>
-            <button type="submit" class="btn btn-info btn-block" id="submit"></span> Request & we will get back to you soon!</button>
+          <div style="width: 304px; margin: 0 auto; margin-bottom: 10px;">
+            <div class="g-recaptcha" data-sitekey="6LdBfDYUAAAAADot7wZ9jpcgMwJar2_tJhQL1PtH"></div>
+          </div>
+          <input type="submit" name="submit" id="submit" value="Request & we will get back to you soon!" class="btn btn-info btn-block">
         </form>
       </div>
       <div class="modal-footer">
@@ -248,29 +256,6 @@
     </div>
   </div>
 </div> 
-
-<script>
-$(document).ready(function(){
-    $("#contactBtn").click(function(){
-        $("#myModal").modal();
-    });
-});
-</script>
-
-<script>
-function initMap() {
-  var uluru = {lat: 28.601167, lng: -81.223228};
-  var map = new google.maps.Map(document.getElementById('map'), {
-    zoom: 15,
-    center: uluru,
-    clickableIcons: true
-  });
-  var marker = new google.maps.Marker({
-    position: uluru,
-    map: map
-  });
-}
-</script>
 
 <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDo7ru1y7ntwm1nlOAogse-gWPyCC3hYXY&callback=initMap"></script>
 
