--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   </nav>
 </div>
 
-<div class="section homeSectionOne">
+<div class="section homeSectionOne" id="homeSectionOne">
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-sm-6" style="color: white; text-align: right;">
@@ -68,6 +68,38 @@
   </div>
 </div>
 
+<!-- <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+  </ol>
+
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+      <img src="images/products/productsBanner.png" alt="...1">
+      <div class="carousel-caption">
+        ...
+      </div>
+    </div>
+    <div class="item">
+      <img src="images/industries/industriesBanner.png" alt="...">
+    </div>
+    <div class="item">
+      <img src="images/news/newsHeader2.png" alt="...">
+    </div>
+    ...
+  </div>
+
+  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div> -->
 <div class="section homeSectionTwo">
   <div class="container">
     <div class="row">
