--- a/index.html
+++ b/index.html
@@ -54,52 +54,28 @@
   </nav>
 </div>
 
-<div class="section homeSectionOne" id="homeSectionOne">
+<div style="min-height: 50%;">
+  <div class="carousel slide carousel-fade" data-ride="carousel">
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+      <div class="item active"></div>
+      <div class="item"></div>
+      <div class="item"></div>
+    </div>
+  </div>
+
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-sm-6" style="color: white; text-align: right;">
         <h1></h1>
       </div>
-      <div class="col-xs-12 col-sm-6" style="color: white; text-align: right; padding: 30% 25px 15% 25px; text-shadow: 2px 2px 15px black;">
+      <div class="col-xs-12 col-sm-6" style="color: white; text-align: right; padding: 30% 25px 30% 25px; text-shadow: 2px 2px 15px black;">
         <h1>Providing fully custom display solutions since 1990</h1>
       </div>
     </div>
-    <div class="row" style="height: 90px;" id="productSection"></div>
   </div>
 </div>
 
-<!-- <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-  </ol>
-
-  <div class="carousel-inner" role="listbox">
-    <div class="item active">
-      <img src="images/products/productsBanner.png" alt="...1">
-      <div class="carousel-caption">
-        ...
-      </div>
-    </div>
-    <div class="item">
-      <img src="images/industries/industriesBanner.png" alt="...">
-    </div>
-    <div class="item">
-      <img src="images/news/newsHeader2.png" alt="...">
-    </div>
-    ...
-  </div>
-
-  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div> -->
 <div class="section homeSectionTwo">
   <div class="container">
     <div class="row">
