Fixed the carousel issues on the product page. Changed the format of the OLED page.

--- a/about.html
+++ b/about.html
@@ -91,7 +91,7 @@
         <div class="aboutFloatingText">
           <p>E-mail: <a href="mailto:arif@microtipsusa.com">arif@microtipsusa.com</a></p>
           <p>Phone: (407) 273-0204 x101</p>
-          Cell: (407) 758-1095
+          Cell: &#40;&#52;&#48;&#55;&#41;&#32;&#55;&#53;&#56;&#45;&#49;&#48;&#57;&#53;
         </div>
       </div>
       <h3>Reza "Arif" Arfin</h3>
