--- a/about.html
+++ b/about.html
@@ -218,7 +218,7 @@
         </div>
       </div>
       <h3>David Khonsary</h3>
-      <h5>"I don't know what I am" - DK</h5>
+      <h5>Office Hottie</h5>
     </div>
   </div>
 </div>
