--- a/about.html
+++ b/about.html
@@ -84,8 +84,7 @@
 <div class="container">
   <h1>Meet the Team</h1>
   <div class="row">
-    <div class="col-sm-3 col-xs-12"></div>
-    <div class="col-sm-6 col-xs-12 meetTeam2">
+    <div class="col-sm-4 col-xs-12 meetTeam2">
       <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\RA.png">
       <div class="middle">
         <div class="aboutFloatingText">
@@ -97,47 +96,6 @@
       <h3>Reza "Arif" Arfin</h3>
       <h5>Executive Vice President, North American Operations</h5>
     </div>
-    <div class="col-sm-3 col-xs-12"></div>
-  </div>
-  <div class="row">
-    <div class="col-lg-4 col-sm-4 col-xs-12 meetTeam2">
-      <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\GV.png">
-      <div class="middle">
-        <div class="aboutFloatingText">
-          <p>E-mail: <a href="mailto:george@microtipsusa.com">george@microtipsusa.com</a></p>
-          <p>Phone: (407) 273-0204 x102</p>
-          Cell: (407) 325-5096
-        </div>
-      </div>
-      <h3>George Van Driessche</h3>
-      <h5>Senior Regional Sales Manager - North America, East</h5>
-    </div>
-    <div class="col-lg-4 col-sm-4 col-xs-12 meetTeam2">
-      <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\JB.png">
-      <div class="middle">
-        <div class="aboutFloatingText">
-          <p>E-mail: <a href="mailto:jordan@microtipsusa.com">jordan@microtipsusa.com</a></p>
-          <p>Phone: (407) 273-0204 x105</p>
-          Cell: (937) 654-0576
-        </div>
-      </div>
-      <h3>Jordan Baker</h3>
-      <h5>Regional Sales Manager - North America, West</h5>
-    </div>
-    <div class="col-lg-4 col-sm-4 col-xs-12 meetTeam2">
-      <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\GM.png">
-      <div class="middle">
-        <div class="aboutFloatingText">
-          <p>E-mail: <a href="mailto:grace-ann@microtipsusa.com">grace-ann@microtipsusa.com</a></p>
-          Phone: (407) 273-0204 x108
-        </div>
-      </div>
-      <h3>Grace-Ann Munroe</h3>
-      <h5>Inside Sales Manager</h5>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-sm-2 col-xs-12"></div>
     <div class="col-sm-4 col-xs-12 meetTeam2">
       <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\NR.png">
       <div class="middle">
@@ -151,6 +109,43 @@
       <h5>Chief Technical Officer</h5>
     </div>
     <div class="col-sm-4 col-xs-12 meetTeam2">
+      <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\GV.png">
+      <div class="middle">
+        <div class="aboutFloatingText">
+          <p>E-mail: <a href="mailto:george@microtipsusa.com">george@microtipsusa.com</a></p>
+          <p>Phone: (407) 273-0204 x102</p>
+          Cell: (407) 325-5096
+        </div>
+      </div>
+      <h3>George Van Driessche</h3>
+      <h5>Senior Regional Sales Manager - North America, East</h5>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-3 col-xs-12 meetTeam2">
+      <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\JB.png">
+      <div class="middle">
+        <div class="aboutFloatingText">
+          <p>E-mail: <a href="mailto:jordan@microtipsusa.com">jordan@microtipsusa.com</a></p>
+          <p>Phone: (407) 273-0204 x105</p>
+          Cell: (937) 654-0576
+        </div>
+      </div>
+      <h3>Jordan Baker</h3>
+      <h5>Regional Sales Manager - North America, West</h5>
+    </div>
+    <div class="col-sm-3 col-xs-12 meetTeam2">
+      <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\GM.png">
+      <div class="middle">
+        <div class="aboutFloatingText">
+          <p>E-mail: <a href="mailto:grace-ann@microtipsusa.com">grace-ann@microtipsusa.com</a></p>
+          Phone: (407) 273-0204 x108
+        </div>
+      </div>
+      <h3>Grace-Ann Munroe</h3>
+      <h5>Inside Sales Manager</h5>
+    </div>
+    <div class="col-sm-3 col-xs-12 meetTeam2">
       <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\JR.png">
       <div class="middle">
         <div class="aboutFloatingText">
@@ -161,10 +156,7 @@
       <h3>Jordan Ruhl</h3>
       <h5>Field Application Engineer</h5>
     </div>
-    <div class="col-sm-2 col-xs-12"></div>
-  </div>
-  <div class="row">
-    <div class="col-lg-4 col-md-4 meetTeam2 otherFive">
+    <div class="col-sm-3 col-xs-12 meetTeam2">
       <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\SH.png">
       <div class="middle">
         <div class="aboutFloatingText">
@@ -175,7 +167,9 @@
       <h3>Susan Hitchcock</h3>
       <h5>Administrative & Customer Services Manager</h5>
     </div>
-    <div class="col-lg-4 col-md-4 meetTeam2 otherFive">
+  </div>
+  <div class="row" style="padding-bottom: 20px;">
+    <div class="col-sm-3 col-xs-12 meetTeam2">
       <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\MR.png">
       <div class="middle">
         <div class="aboutFloatingText">
@@ -186,7 +180,7 @@
       <h3>Marzana Rashid</h3>
       <h5>Assistant Quality Logistics Manager</h5>
     </div>
-    <div class="col-lg-4 col-md-4 meetTeam2 otherFive">
+    <div class="col-sm-3 col-xs-12 meetTeam2">
       <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\DC.png">
       <div class="middle">
         <div class="aboutFloatingText">
@@ -197,7 +191,7 @@
       <h3>Danny Clark</h3>
       <h5>Logistics Manager</h5>
     </div>
-    <div class="col-lg-4 col-md-4 meetTeam2 otherFive">
+    <div class="col-sm-3 col-xs-12 meetTeam2">
       <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\SB.png">
       <div class="middle">
         <div class="aboutFloatingText">
@@ -209,7 +203,7 @@
       <h3>Sultan Bashar</h3>
       <h5>ODM/OEM Project Manager</h5>
     </div>
-    <div class="col-lg-4 col-md-4 meetTeam2 otherFive">
+    <div class="col-sm-3 col-xs-12 meetTeam2">
       <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\DK.png">
       <div class="middle">
         <div class="aboutFloatingText">
