Made minor changes on distributor page. Made change to Grace-Ann's pic. New Industries format I'm testing out.

--- a/distreps.html
+++ b/distreps.html
@@ -162,7 +162,7 @@
         </th>
         <td>
           <p>
-            World Micro is a company that might be selling Microtips products.
+            World Micro is a global franchised distributor offering design and engineering support providing unique supply chain solutions to solve our customers’ complex and ever-changing requirements.
           </p>
         </td>
       </tr>
@@ -517,7 +517,7 @@
           <div class="blueSplitter"></div>
         </div>
 
-        <div class="repInfo USAreps CANreps WVreps NBreps NLreps NSreps PEreps QCreps" style="padding-top: 10px;">
+        <div class="repInfo USAreps CANreps WVreps NBreps NLreps NSreps PEreps QCreps MNreps" style="padding-top: 10px;">
           <p>
             <strong>Microtips Technology</strong><br>George Van Driessche<br>Senior Regional Sales Manager (East)<br>3504 Lake Lynda Dr, Ste #110 <br>Orlando, Fl  32817<br>Phone: 407-273-0204 x102<br>Fax: 407-273-0771<br>Email: <a href="mailto:george@microtipsusa.com">george@microtipsusa.com</a>
           </p>
@@ -583,13 +583,6 @@
         <div class="repInfo USAreps ORreps" style="padding-top: 10px;">
           <p>
             <strong>MaRC Technologies</strong><br>Mike Gunderson<br>14765 SE 82nd Drive<br>Clackamas, OR 97015<br>Phone: 503-789-2561<br>Email: <a href="mailto:mike@marctechnologies.com">mike@marctechnologies.com</a><br>URL: <a target="_blank" href="http://www.marctechnologies.com">www.marctechnologies.com</a><br>Areas Covered: OR
-          </p>
-          <div class="blueSplitter"></div>
-        </div>
-
-        <div class="repInfo USAreps MNreps NDreps SDreps WIreps" style="padding-top: 10px;">
-          <p>
-            <strong>Northstar Technology Sales</strong><br>Chuck Diehl<br>5720 Smetana Dr., Suite 100<br>Minnetonka, MN 55343<br>Phone: 952-831-6777<br>Mobile: 612-802-9790<br>Email: <a href="mailto:diehl@northstartek.com">diehl@northstartek.com</a><br>Areas Covered: MN, ND, SD and Western WI
           </p>
           <div class="blueSplitter"></div>
         </div>
@@ -779,7 +772,7 @@
     <div class="col-xs-12">
       <ul style="padding-left: 0px;">
 
-        <div class="repInfo USAreps CANreps WVreps NBreps NLreps NSreps PEreps QCreps" style="padding-top: 10px;">
+        <div class="repInfo USAreps CANreps WVreps NBreps NLreps NSreps PEreps QCreps MNreps" style="padding-top: 10px;">
           <p>
             <strong>Microtips Technology</strong><br>George Van Driessche<br>Senior Regional Sales Manager (East)<br>3504 Lake Lynda Dr, Ste #110 <br>Orlando, Fl  32817<br>Phone: 407-273-0204 x102<br>Fax: 407-273-0771<br>Email: <a href="mailto:george@microtipsusa.com">george@microtipsusa.com</a>
           </p>
@@ -845,13 +838,6 @@
         <div class="repInfo USAreps ORreps" style="padding-top: 10px;">
           <p>
             <strong>MaRC Technologies</strong><br>Mike Gunderson<br>14765 SE 82nd Drive<br>Clackamas, OR 97015<br>Phone: 503-789-2561<br>Email: <a href="mailto:mike@marctechnologies.com">mike@marctechnologies.com</a><br>URL: <a target="_blank" href="http://www.marctechnologies.com">www.marctechnologies.com</a><br>Areas Covered: OR
-          </p>
-          <div class="blueSplitter"></div>
-        </div>
-
-        <div class="repInfo USAreps MNreps NDreps SDreps WIreps" style="padding-top: 10px;">
-          <p>
-            <strong>Northstar Technology Sales</strong><br>Chuck Diehl<br>5720 Smetana Dr., Suite 100<br>Minnetonka, MN 55343<br>Phone: 952-831-6777<br>Mobile: 612-802-9790<br>Email: <a href="mailto:diehl@northstartek.com">diehl@northstartek.com</a><br>Areas Covered: MN, ND, SD and Western WI
           </p>
           <div class="blueSplitter"></div>
         </div>
