--- a/industries.html
+++ b/industries.html
@@ -90,104 +90,161 @@
         <li><a href="#hvacTab" data-toggle="tab"><i class="fa fa-thermometer-half industryLinks" style="font-size: 40px;"></i><br>HVAC</a></li>
         <li><a href="#telecomTab" data-toggle="tab"><i class="fa fa-phone industryLinks" style="font-size: 40px;"></i><br>Telecom</a></li>
       </ul>
-      <div class="tab-content">
-        <div class="tab-pane" id="automotiveTab">
-          <div class="row">
-            <div class="col-xs-12" style="">
-              <h2>Automotive LCD</h2>
+    </div>
+
+    <div class="tab-content">
+
+      <div class="tab-pane" id="automotiveTab">
+        <div class="section autoSection">
+          <div class="container">
+            <div style="text-align: center;" id="content-desktop">
+              <h1 style="font-size: 100px; padding: 75px 0px;">Automotive</h1>
+            </div>
+            <div style="text-align: center;" id="content-mobile">
+              <h1 style="font-size: 75px; padding: 50px 0px;">Automotive</h1>
+            </div>
+          </div>
+        </div>
+        <div class="container">
+          <div class="blueSplitter" style="margin-top: 10px;"></div>
+          <div class="row" style="margin: 50px 0px;">
+            <div class="col-xs-12 col-sm-6">
+              <h4>Features: </h4>
+              <p style="padding-left: 20px;">
+                Automotive Grade Fluid<br>
+                Wide Temperature Range<br>
+                IPS Technology Available<br>
+                Anti-Glare & Anti-Reflective Films Available<br>
+                TS 16949 Certification<br>
+              </p>
+            </div>
+            <div class="col-xs-12 col-sm-6">
+              <h4>Solutions: </h4>
+              <p style="padding-left: 20px;">
+                Speedometer & Tachometer<br>
+                Satellite Navigation<br>
+                Radio & Dash Control<br>
+                Back-Up Camera<br>
+                Guage Cluster<br>
+              </p>
             </div>
           </div>
           <div class="blueSplitter"></div>
-          <div class="row">
-            <div class="col-xs-12" style="padding-top: 5px;">
-              <p>Microtips Technology brings to you a whole new range of color TFT LCD display products, from the latest in LCD technology. A TFT LCD Display, or color LCD module is a variant of an LCD which uses thin film transistor technology to improve an image quality. Color LCD module is use in many appliances such as television, computer monitors, kindles, mobile phone, and navigation system within a airplane cockpit and much more. We have a rich inventory of color TFT LCDs products manufactured at our facilities in Taiwan and Mainland China.</p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-xs-12 col-sm-4">
-              <img class="img-responsive" src="images/products/tft/2.4 TFT.JPG">
-            </div>
-            <div class="col-sm-8 col-xs-12">
-              <p>Our Color TFT LCDs are designed for ultra high crystals, with high quality, and performance. TFT LCD Module helps a person to see the contrast more clearly and precisely. The construction of a Color LCD Module or TFT LCD Module is quite extraordinary because of the circuitry layout process upon which TFT LCD Modules are made is quite similar to that of a semiconductor product. Color LCD Modules comes in many different sizes such as 2.4 inch, 2.8 inch 3.5 inch 4.3 inch 5.7 inch, 7.0 inch. Our 3.5” is our most popular one, because of the different type of application involve with this display. The interface types are CPU Mode (RGB/Digital TTL) 2.4, 2.8, 3.5, 5.7 and 7”. Our color LCD Module has a Sync Mode(RGB/Digital TTL) with data Enable mode (RGB/Digital TTL) LVDS. Most of our color TFT LCD Modules has White LED backlighting which is a energy saver in the long run. High or extended temperature TFTs available with 4-8 wire resistive and capacitive Medical.</p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-xs-12">
-              <p>There is varieties type of LCD Modules such as the TFT LCD Module Touch, which is used in many LCDs display units. TFT LCD Module Touch offer an easier UI and can be used instead of traditional touch screens for switches, connectors, cable covers and heaters, LCD Module Touch: is another form of the module but without color, these are older style which contain Cathode Ray Tube monitors. STN is a characteristic of a display with no color, and possible can had touch capabilities but may rise in cost. LCD Module Touch can be use for many applications such as calculators, automotive etc.</p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-sm-8 col-xs-12">
-              <p>LCD module touch are use to make life more efficient, base on a introductory finding by 3M in 2002, touch screen capabilities where advance base on a system which use sensors to detect the electric charge that accumulates in certain solid materials like for instance the glass of an LCD when there is interactions with screen. There is also a complex algorithm with these devices which analytically provide the actual location of the touch. Another prospect that associate with TFT Display Modules and color LCD Modules in general is the Driver IC controller Himax and Sitronix. These particular IC are use as the Driver controller for many displays around our world today, as Microtips Technology promote innovation and technical support we can conclude that we are here to meet any of your TFT display module needs both standard and customize.</p>
-            </div>
-            <div class="col-sm-4 col-xs-12">
-              <img class="img-responsive" src="images/products/tft/7.0 TFT.png">
-            </div>
-          </div>
-          <div class="blueSplitter"></div>
-          <div class="row">
-            <h3>Learn More</h3>
-          </div>
-          <div class="row" style="min-height: 500px;">
-            <ul>
-              <li><a href="https://www.youtube.com/watch?v=1MHS386tyxk">What is an OLED display?</a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="tab-pane" id="industrialTab">
-          <div class="col-xs-12" style="">
-            <h2>Industrial</h2>
-          </div>
-          <div class="row">
-            <div class="col-xs-12 col-sm-4">
-              <img class="img-responsive" src="images/products/oled/DLC0550AZOM-T OLED.JPG">
-            </div>
-            <div class="col-sm-8 col-xs-12">
-              <p>OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED OLED </p>
-              <ul>
-                <li>Easy to read</li>
-                <li>Easy to read</li>
-                <li>Easy to read</li>
-                <li>Easy to read</li>
-                <li>Easy to read</li>
-                <li>Easy to read</li>
-              </ul>
-            </div>
-          </div>
-          <div class="blueSplitter"></div>
-          <div class="row">
-            <h3>Learn More</h3>
-          </div>
-          <div class="row" style="min-height: 500px;">
-            <ul>
-              <li><a href="https://www.youtube.com/watch?v=1MHS386tyxk">What is an OLED display?</a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="tab-pane" id="medicalTab">
-          <div class="col-xs-12" style="">
-            <h2>Medical</h2>
-          </div>
-          <p>Howdy, I'm in Section Touch panel.</p>
-        </div>
-        <div class="tab-pane" id="consumerTab">
-          <div class="col-xs-12" style="">
-            <h2>Consumer</h2>
+          <div>
+            <h2 style="margin-top: 10px;">Featured Automotive Products</h2>
           </div>
           <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRxnPTFTbBLkpn1yvkosZkSuznA8QbdxRwM9YvuwC1j1HEjAsA969dasjN0rN6z3Vya9pcLWathVVPt/embed?start=false&loop=false&delayms=5000" frameborder="0" width="100%" height="700px" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
         </div>
-        <div class="tab-pane" id="hvacTab">
-          <div class="col-xs-12" style="">
-            <h2>HVAC</h2>
+      </div>
+
+
+      <div class="tab-pane" id="industrialTab">
+        <div class="section industrialSection">
+          <div class="container">
+            <div style="text-align: center;" id="content-desktop">
+              <h1 style="font-size: 100px; padding: 75px 0px;">Industrial</h1>
+            </div>
+            <div style="text-align: center;" id="content-mobile">
+              <h1 style="font-size: 75px; padding: 50px 0px;">Industrial</h1>
+            </div>
           </div>
-          <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRdOFDqReDSJbzyPyspLPYrn9_yhkCWyxakxjofR2yZCnC8UU9AEQlwEyvmWmyhTtJfmq3KNUfGWf5E/embed?start=false&loop=false&delayms=5000" frameborder="0" width="100%" height="700px" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
         </div>
-        <div class="tab-pane" id="telecomTab">
-          <div class="col-xs-12" style="">
-            <h2>Telecom</h2>
+        <div class="container">
+          <div class="blueSplitter" style="margin-top: 10px;"></div>
+          <div class="row" style="margin: 50px 0px;">
+            <div class="col-xs-12 col-sm-6">
+              <h4>Features: </h4>
+              <p style="padding-left: 20px;">
+                Ruggedization & Durability<br>
+                Wide Temperature Range<br>
+                PCAP with Glove Tuning Available<br>
+                Anti-Glare & Anti-Reflective Films Available<br>
+                Long-term Availability<br>
+              </p>
+            </div>
+            <div class="col-xs-12 col-sm-6">
+              <h4>Solutions: </h4>
+              <p style="padding-left: 20px;">
+                Measurement Tools<br>
+                Human Interface Devices<br>
+                Machine Control<br>
+                Factory Automation Tools<br>
+                Field Diagnostic Devices<br>
+              </p>
+            </div>
           </div>
-          <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRq5H49QYuapoWd3kxksRYwCTJlLQdk4lO7OLG9Po99ik3sbYHPQ6_IBqsZBtFHipTneHdJzeEIm1c3/embed?start=false&loop=false&delayms=5000" frameborder="0" width="100%" height="700px" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+          <div class="blueSplitter"></div>
+          <div>
+            <h2 style="margin-top: 10px;">Featured Industrial Products</h2>
+          </div>
+          <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRxnPTFTbBLkpn1yvkosZkSuznA8QbdxRwM9YvuwC1j1HEjAsA969dasjN0rN6z3Vya9pcLWathVVPt/embed?start=false&loop=false&delayms=5000" frameborder="0" width="100%" height="700px" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
         </div>
+      </div>
+
+
+      <div class="tab-pane" id="medicalTab">
+        <div class="section medicalSection">
+          <div class="container">
+            <div style="text-align: center;" id="content-desktop">
+              <h1 style="font-size: 100px; padding: 75px 0px;">Medical</h1>
+            </div>
+            <div style="text-align: center;" id="content-mobile">
+              <h1 style="font-size: 75px; padding: 50px 0px;">Medical</h1>
+            </div>
+          </div>
+        </div>
+        <div class="container">
+          <div class="blueSplitter" style="margin-top: 10px;"></div>
+          <div class="row" style="margin: 50px 0px;">
+            <div class="col-xs-12 col-sm-6">
+              <h4>Features: </h4>
+              <p style="padding-left: 20px;">
+                High-Brightness and High-Resolutions<br>
+                Waterproofing Available<br>
+                PCAP with Glove Tuning Available<br>
+                Anti-Glare & Anti-Reflective Films Available<br>
+                Long-term Availability<br>
+              </p>
+            </div>
+            <div class="col-xs-12 col-sm-6">
+              <h4>Solutions: </h4>
+              <p style="padding-left: 20px;">
+                Patient Health Monitors<br>
+                Measurement Equipment<br>
+                Wrist-Mounted Monitoring Devices<br>
+                Tablet PCs<br>
+                Small Meters: blood pressure, glucose, insulin, heart rate, etc.<br>
+              </p>
+            </div>
+          </div>
+          <div class="blueSplitter"></div>
+          <div>
+            <h2 style="margin-top: 10px;">Featured Medical Products</h2>
+          </div>
+          <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRxnPTFTbBLkpn1yvkosZkSuznA8QbdxRwM9YvuwC1j1HEjAsA969dasjN0rN6z3Vya9pcLWathVVPt/embed?start=false&loop=false&delayms=5000" frameborder="0" width="100%" height="700px" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+        </div>
+      </div>
+
+
+      <div class="tab-pane" id="consumerTab">
+        <div class="col-xs-12" style="">
+          <h2>Consumer</h2>
+        </div>
+        <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRxnPTFTbBLkpn1yvkosZkSuznA8QbdxRwM9YvuwC1j1HEjAsA969dasjN0rN6z3Vya9pcLWathVVPt/embed?start=false&loop=false&delayms=5000" frameborder="0" width="100%" height="700px" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+      </div>
+      <div class="tab-pane" id="hvacTab">
+        <div class="col-xs-12" style="">
+          <h2>HVAC</h2>
+        </div>
+        <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRdOFDqReDSJbzyPyspLPYrn9_yhkCWyxakxjofR2yZCnC8UU9AEQlwEyvmWmyhTtJfmq3KNUfGWf5E/embed?start=false&loop=false&delayms=5000" frameborder="0" width="100%" height="700px" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+      </div>
+      <div class="tab-pane" id="telecomTab">
+        <div class="col-xs-12" style="">
+          <h2>Telecom</h2>
+        </div>
+        <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRq5H49QYuapoWd3kxksRYwCTJlLQdk4lO7OLG9Po99ik3sbYHPQ6_IBqsZBtFHipTneHdJzeEIm1c3/embed?start=false&loop=false&delayms=5000" frameborder="0" width="100%" height="700px" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+      </div>
+      <div class="container">
         <div class="blueSplitter"></div>
       </div>
     </div>
