Added a wordpress button. Working on images and making them all look good

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             <a href="https://www.linkedin.com/company/microtips-technology-usa"><i class="navbarIcons fa fa-linkedin-square"></i></a>
             <a href="https://twitter.com/MicroTipsUSA"><i class="navbarIcons fa fa-twitter-square"></i></a>
             <a href="https://www.youtube.com/channel/UCUW7bcaTxuToVjchC2AKgAw"><i class="navbarIcons fa fa-youtube-square"></i></a>
+            <a href="http://www.microtipsusa.com/blog/"><i class="navbarIcons fa fa-wordpress"></i></a>
             <button class="btn btn-info navbar-btn" id="contactBtn" style="margin-left: 0px; margin-top: -6px;">Contact Us!</button>
           </div>
         </div>
@@ -54,7 +55,7 @@
   </nav>
 </div>
 
-<div style="min-height: 50%;">
+<div style="min-height: 50%;" id="content-desktop">
   <div class="carousel slide carousel-fade indexCarousel indexCarousel-fade" data-ride="indexCarousel">
     <!-- Wrapper for slides -->
     <div class="carousel-inner indexCarousel-inner" role="listbox">
@@ -71,6 +72,21 @@
       </div>
       <div class="col-xs-12 col-sm-6" style="color: white; text-align: right; padding: 30% 25px 30% 25px; text-shadow: 2px 2px 15px black;">
         <h1>Providing fully custom display solutions since 1990</h1>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div style="min-height: 50%;" id="content-mobile">
+  <div class="section homeSectionOne">
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12 col-sm-6" style="color: white; text-align: right;">
+          <h1></h1>
+        </div>
+        <div class="col-xs-12 col-sm-6" style="color: white; text-align: right; padding: 30% 25px 30% 25px; text-shadow: 2px 2px 15px black;">
+          <h1>Providing fully custom display solutions since 1990</h1>
+        </div>
       </div>
     </div>
   </div>
@@ -98,17 +114,17 @@
       <a href="allProducts.html#wipowTab" class="col-lg-3 col-sm-3 col-xs-12 hs2links">
         <img class="img-responsive productImage" src="images/products/wirelessPower/airon.png" height="200px">
         <h3>Wireless Power</h3>
-        <p>A Touch Panel can bring your product and it's user closer together. We can provide a Capacitive or Resistive Touch Panel to ANY of our displays.</p>
+        <p>Wireless Power and wireless charging can make your device easier to use. We can provide Qi and Magnetic Resonance solutions.</p>
       </a>
     </div>
     <div class="row">
       <a href="allProducts.html#charmonoTab" class="col-lg-3 col-sm-3 col-xs-12 hs2links">
-        <img class="img-responsive productImage" src="images/products/charMono/CharacterMonochrome.png" height="200px">
+        <img class="img-responsive productImage" src="images/products/charMono/charMono3.png" height="200px">
         <h3>Character Monochrome</h3>
         <p>A Character Monochrome LCD is a simple, easy to read and use display solution. Although not as popular as before, we still provide fully custom character displays.</p>
       </a>
       <a href="allProducts.html#graphmonoTab" class="col-lg-3 col-sm-3 col-xs-12 hs2links">
-        <img class="img-responsive productImage" src="images/products/graphMono/GraphicMonochrome.png" height="200px">
+        <img class="img-responsive productImage" src="images/products/graphMono/graphMono4.png" height="200px">
         <h3>Graphic Monochrome</h3>
         <p>A Graphic Monochrome LCD can add a lot of customization to your product over a character display. We provide any size, resolution, and color.</p>
       </a>
@@ -118,9 +134,9 @@
         <p>For when your project needs a truly iconic look. We can provide a Custom Segment LCD with any number of segments, custom icons, and in any color.</p>
       </a>
       <a href="allProducts.html#emsTab" class="col-lg-3 col-sm-3 col-xs-12 hs2links">
-        <img class="img-responsive productImage" src="images/products/EMS/ems.jpeg" height="200px">
+        <img class="img-responsive productImage" src="images/products/EMS/ems3.png" height="200px">
         <h3>EMS</h3>
-        <p>A Touch Panel can bring your product and it's user closer together. We can provide a Capacitive or Resistive Touch Panel to ANY of our displays.</p>
+        <p>Let our Electronics Manufacturing Services team take the lead for your project to provide peace of mind and effective solutions.</p>
       </a>
     </div>
     <div class="row" style="height: 50px;" id="industrySection"></div>
