--- a/about.html
+++ b/about.html
@@ -46,6 +46,7 @@
             <a href="https://www.linkedin.com/company/microtips-technology-usa"><i class="navbarIcons fa fa-linkedin-square"></i></a>
             <a href="https://twitter.com/MicroTipsUSA"><i class="navbarIcons fa fa-twitter-square"></i></a>
             <a href="https://www.youtube.com/channel/UCUW7bcaTxuToVjchC2AKgAw"><i class="navbarIcons fa fa-youtube-square"></i></a>
+            <a href="http://www.microtipsusa.com/blog/"><i class="navbarIcons fa fa-wordpress"></i></a>
             <button class="btn btn-info navbar-btn" id="contactBtn" style="margin-left: 0px; margin-top: -6px;">Contact Us!</button>
           </div>
         </div>
@@ -225,20 +226,20 @@
   <div class="container">
     <h1>Locations</h1>
     <div class="row">
-      <div class="col-xs-4">
-        <img class="img-responsive" src="images\about\locations\MTU.jpg">
+      <div class="col-xs-12 col-sm-4">
+        <img class="img-responsive" src="images\about\locations\MTUshort.jpg">
         <h3>USA</h3>
         <p>3504 Lake Lynda Drive, Orlando, FL, 32817</p>
       </div>
-      <div class="col-xs-4">
-        <img class="img-responsive" src="images\about\locations\MTT.JPG">
+      <div class="col-xs-12 col-sm-4">
+        <img class="img-responsive" src="images\about\locations\MTTW.JPG">
         <h3>Taiwan</h3>
-        <p>Somewhere in Taiwan</p>
+        <p>12F, No. 31, Lane 169, Kang-Ning St., Hsi-Chih District,  New Taipei City 221, Taiwan</p>
       </div>
-      <div class="col-xs-4">
-        <img class="img-responsive" src="images\about\locations\MTT.JPG">
+      <div class="col-xs-12 col-sm-4">
+        <img class="img-responsive" src="images\about\locations\MTDG.JPG">
         <h3>China</h3>
-        <p>Somewhere in China</p>
+        <p>Dong-Shen Road, Si-Ma Village, Chang-Ping Town, Dong-Gaung City, Guang-Dong Province, China 523570</p>
       </div>
     </div>
     <br>
