--- a/industries.html
+++ b/industries.html
@@ -58,6 +58,7 @@
             <a href="https://www.linkedin.com/company/microtips-technology-usa"><i class="navbarIcons fa fa-linkedin-square"></i></a>
             <a href="https://twitter.com/MicroTipsUSA"><i class="navbarIcons fa fa-twitter-square"></i></a>
             <a href="https://www.youtube.com/channel/UCUW7bcaTxuToVjchC2AKgAw"><i class="navbarIcons fa fa-youtube-square"></i></a>
+            <a href="http://www.microtipsusa.com/blog/"><i class="navbarIcons fa fa-wordpress"></i></a>
             <button class="btn btn-info navbar-btn" id="contactBtn" style="margin-left: 0px; margin-top: -6px;">Contact Us!</button>
           </div>
         </div>
@@ -227,23 +228,132 @@
 
 
       <div class="tab-pane" id="consumerTab">
-        <div class="col-xs-12" style="">
-          <h2>Consumer</h2>
+        <div class="section consumerSection">
+          <div class="container">
+            <div style="text-align: center;" id="content-desktop">
+              <h1 style="font-size: 100px; padding: 75px 0px;">Consumer</h1>
+            </div>
+            <div style="text-align: center;" id="content-mobile">
+              <h1 style="font-size: 75px; padding: 50px 0px;">Consumer</h1>
+            </div>
+          </div>
         </div>
-        <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRxnPTFTbBLkpn1yvkosZkSuznA8QbdxRwM9YvuwC1j1HEjAsA969dasjN0rN6z3Vya9pcLWathVVPt/embed?start=false&loop=false&delayms=5000" frameborder="0" width="100%" height="700px" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+        <div class="container">
+          <div class="blueSplitter" style="margin-top: 10px;"></div>
+          <div class="row" style="margin: 50px 0px;">
+            <div class="col-xs-12 col-sm-6">
+              <h4>Features: </h4>
+              <p style="padding-left: 20px;">
+                High-Brightness and High-Resolutions<br>
+                Waterproofing Available<br>
+                Capacitive Touchscreen Available<br>
+                Anti-Glare & Anti-Reflective Films Available<br>
+                Custom Shapes and Sizes Available<br>
+              </p>
+            </div>
+            <div class="col-xs-12 col-sm-6">
+              <h4>Solutions: </h4>
+              <p style="padding-left: 20px;">
+                Smartphones<br>
+                Wearable Devices<br>
+                Cameras<br>
+                Tablet PCs<br>
+                White Goods<br>
+              </p>
+            </div>
+          </div>
+          <div class="blueSplitter"></div>
+          <div>
+            <h2 style="margin-top: 10px;">Featured Consumer Products</h2>
+          </div>
+          <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRxnPTFTbBLkpn1yvkosZkSuznA8QbdxRwM9YvuwC1j1HEjAsA969dasjN0rN6z3Vya9pcLWathVVPt/embed?start=false&loop=false&delayms=5000" frameborder="0" width="100%" height="700px" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+        </div>
       </div>
+
+
       <div class="tab-pane" id="hvacTab">
-        <div class="col-xs-12" style="">
-          <h2>HVAC</h2>
+        <div class="section hvacSection">
+          <div class="container">
+            <div style="text-align: center;" id="content-desktop">
+              <h1 style="font-size: 100px; padding: 75px 0px;">HVAC</h1>
+            </div>
+            <div style="text-align: center;" id="content-mobile">
+              <h1 style="font-size: 75px; padding: 50px 0px;">HVAC</h1>
+            </div>
+          </div>
         </div>
-        <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRdOFDqReDSJbzyPyspLPYrn9_yhkCWyxakxjofR2yZCnC8UU9AEQlwEyvmWmyhTtJfmq3KNUfGWf5E/embed?start=false&loop=false&delayms=5000" frameborder="0" width="100%" height="700px" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+        <div class="container">
+          <div class="blueSplitter" style="margin-top: 10px;"></div>
+          <div class="row" style="margin: 50px 0px;">
+            <div class="col-xs-12 col-sm-6">
+              <h4>Features: </h4>
+              <p style="padding-left: 20px;">
+                Ruggedization & Durability<br>
+                Wide Temperature Range<br>
+                PCAP with Glove Tuning Available<br>
+                Anti-Glare & Anti-Reflective Films Available<br>
+                Long-term Availability<br>
+              </p>
+            </div>
+            <div class="col-xs-12 col-sm-6">
+              <h4>Solutions: </h4>
+              <p style="padding-left: 20px;">
+                Thermostats<br>
+                Measurement Devices<br>
+                Diagnostic Tools<br>
+                Electricity & Efficiency Meters<br>
+              </p>
+            </div>
+          </div>
+          <div class="blueSplitter"></div>
+          <div>
+            <h2 style="margin-top: 10px;">Featured HVAC Products</h2>
+          </div>
+          <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRxnPTFTbBLkpn1yvkosZkSuznA8QbdxRwM9YvuwC1j1HEjAsA969dasjN0rN6z3Vya9pcLWathVVPt/embed?start=false&loop=false&delayms=5000" frameborder="0" width="100%" height="700px" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+        </div>
       </div>
+
+
       <div class="tab-pane" id="telecomTab">
-        <div class="col-xs-12" style="">
-          <h2>Telecom</h2>
+        <div class="section telecomSection">
+          <div class="container">
+            <div style="text-align: center;" id="content-desktop">
+              <h1 style="font-size: 100px; padding: 75px 0px;">Telecom</h1>
+            </div>
+            <div style="text-align: center;" id="content-mobile">
+              <h1 style="font-size: 75px; padding: 50px 0px;">Telecom</h1>
+            </div>
+          </div>
         </div>
-        <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRq5H49QYuapoWd3kxksRYwCTJlLQdk4lO7OLG9Po99ik3sbYHPQ6_IBqsZBtFHipTneHdJzeEIm1c3/embed?start=false&loop=false&delayms=5000" frameborder="0" width="100%" height="700px" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+        <div class="container">
+          <div class="blueSplitter" style="margin-top: 10px;"></div>
+          <div class="row" style="margin: 50px 0px;">
+            <div class="col-xs-12 col-sm-6">
+              <h4>Features: </h4>
+              <p style="padding-left: 20px;">
+                High-Brightness and High-Readability<br>
+                Custom Cover Glass Available<br>
+                Capacitive Touchscreen Available<br>
+                Cost Effective Monochrome<br>
+                Long-term Availability<br>
+              </p>
+            </div>
+            <div class="col-xs-12 col-sm-6">
+              <h4>Solutions: </h4>
+              <p style="padding-left: 20px;">
+                Business Phone<br>
+                I'm not sure what else to put<br>
+              </p>
+            </div>
+          </div>
+          <div class="blueSplitter"></div>
+          <div>
+            <h2 style="margin-top: 10px;">Featured Telecom Products</h2>
+          </div>
+          <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRxnPTFTbBLkpn1yvkosZkSuznA8QbdxRwM9YvuwC1j1HEjAsA969dasjN0rN6z3Vya9pcLWathVVPt/embed?start=false&loop=false&delayms=5000" frameborder="0" width="100%" height="700px" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+        </div>
       </div>
+
       <div class="container">
         <div class="blueSplitter"></div>
       </div>
